[package]
name = "acuity-ipfs-pinner"
version = "0.1.0"
edition = "2024"

[dependencies]
bs58 = "0.5"
futures-util = "0.3"
hex = "0.4"
home = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
